Transfer focus to existing dialog, if there is one; b=23029, r=sfraser